# petsc_test_windows

./: README.md  meson.build
petsc-3.14.6/: TAGS  index.html  makefile.html
petsc-3.14.6/arch-mswin-c-opt/include/: petsc.mod  petscao.mod  petscaodef.mod  petscconf.h  petscconfiginfo.h  petscdef.mod  petscdm.mod  petscdmda.mod  petscdmdadef.mod  petscdmdef.mod  petscdmdefdummy.mod  petscdmforest.mod  petscdmforestdef.mod  petscdmlabel.mod  petscdmlabeldef.mod  petscdmnetwork.mod  petscdmnetworkdef.mod  petscdmpatch.mod  petscdmpatchdef.mod  petscdmplex.mod  petscdmplexdef.mod  petscdmswarm.mod  petscdmswarmdef.mod  petscdt.mod  petscis.mod  petscisdef.mod  petscisdefdummy.mod  petscksp.mod  petsckspdef.mod  petsckspdefdummy.mod  petscmachineinfo.h  petscmat.mod  petscmatdef.mod  petscmatdefdummy.mod  petscpc.mod  petscpcdef.mod  petscpcdefdummy.mod  petscsnes.mod  petscsnesdef.mod  petscsnesdefdummy.mod  (+11 more)
petsc-3.14.6/arch-mswin-c-opt/lib/: libpetsc.exp  libpetsc.lib
petsc-3.14.6/arch-mswin-c-opt/lib/pkgconfig/: PETSc.pc
petsc-3.14.6/arch-mswin-c-opt/tests/: datatest.pkl  testfiles
petsc-3.14.6/arch-mswin-c-opt/tests/counts/: ksp_ksp_tutorials-ex2f_1.counts
petsc-3.14.6/docs/: bugreporting.html  codemanagement.html  copyright.html  faq.html  index.html  installation.html  license.html  linearsolvertable.html  nonlinearsolvertable.html
petsc-3.14.6/docs/changes/: 2015.html  2016.html  2017.html  2018-21.html  2022.html  2024.html  2028.html  2029.html  21.html  211.html  212.html  213.html  215.html  216.html  220.html  221.html  230.html  231.html  232.html  233.html  300.html  31.html  310.html  311.html  312.html  313.html  314.html  32.html  33.html  34.html  35.html  36.html  37.html  38.html  39.html  index.html
petsc-3.14.6/docs/manualpages/: help.html  htmlmap  singleindex.html
petsc-3.14.6/docs/manualpages/AO/: AO.html  AOApplicationToPetsc.html  AOApplicationToPetscIS.html  AOApplicationToPetscPermuteInt.html  AOApplicationToPetscPermuteReal.html  AOCreate.html  AOCreateBasic.html  AOCreateBasicIS.html  AOCreateMapping.html  AOCreateMappingIS.html  AOCreateMemoryScalable.html  AOCreateMemoryScalableIS.html  AODestroy.html  AOFinalizePackage.html  AOGetType.html  AOInitializePackage.html  AOMappingHasApplicationIndex.html  AOMappingHasPetscIndex.html  AOPetscToApplication.html  (+12 more)
petsc-3.14.6/include/: index.html  makefile.html  petsc.h.html  petscao.h.html  petscbag.h.html  petscblaslapack.h.html  petscbt.h.html  petsccharacteristic.h.html  petscctable.h.html  petscdm.h.html  petscdmcomposite.h.html  petscdmda.h.html  petscdmdatypes.h.html  petscdmfield.h.html  petscdmlabel.h.html  petscdmmoab.h.html  petscdmnetwork.h.html  petscdmpatch.h.html  petscdmplex.h.html  petscdmproduct.h.html  petscdmredundant.h.html  petscdmshell.h.html  petscdmsliced.h.html  petscdmstag.h.html  petscdmtypes.h.html  petscdraw.h.html  petscdrawtypes.h.html  petscds.h.html  petscdstypes.h.html  petscdt.h.html  petscerror.h.html  petscfe.h.html  petscfetypes.h.html  petscfv.h.html  petscfvtypes.h.html  petscis.h.html  petscistypes.h.html  petscksp.h.html  petsclandau.h.html  petsclog.h.html  (+30 more)
petsc-3.14.6/interfaces/: index.html  makefile.html
petsc-3.14.6/interfaces/lua/: index.html  makefile.html
petsc-3.14.6/src/: index.html  makefile.html
petsc-3.14.6/src/benchmarks/: Index.c.html  MPI_Wtime.c.html  PLogEvent.c.html  PetscGetCPUTime.c.html  PetscGetTime.c.html  PetscMalloc.c.html  PetscMemcmp.c.html  PetscMemcpy.c.html  PetscMemzero.c.html  PetscTime.c.html  PetscVecNorm.c.html  index.html  makefile.html
petsc-3.14.6/src/dm/: index.html  makefile.html
petsc-3.14.6/src/ksp/: index.html  makefile.html
petsc-3.14.6/src/mat/: index.html  makefile.html
petsc-3.14.6/src/snes/: index.html  makefile.html
petsc-3.14.6/src/sys/: index.html  makefile.html
petsc-3.14.6/src/tao/: index.html  makefile.html
petsc-3.14.6/src/ts/: index.html  makefile.html
petsc-3.14.6/src/vec/: index.html  makefile.html
(+14222 files in other folders)
